objects/Change_Request__c.object
<CustomObject>
    <description>This object is to track the service-now change request.</description>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_to__c</fullName>
        <label>Assigned to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>c97024fe53271300e321ddeeff7b1233</fullName>
                    <label>Cab Approver</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce FSC Support</fullName>
                </value>
                <value>
                    <fullName>b85d44954a3623120004689b2d5dd60a</fullName>
                    <default>true</default>
                    <label>CAB Approval</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backout_Plan__c</fullName>
        <defaultValue>&quot;Usine Copado roll out plan&quot;</defaultValue>
        <label>Backout Plan</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Number__c</fullName>
        <label>CR Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>System Software</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <formula>HYPERLINK(&quot;https://dev177258.service-now.com/now/nav/ui/classic/params/target/change_request.do%3Fsys_id%3D&quot;&amp; System_ID__c &amp;&quot;%26sysparm_view%3D&quot;,CR_Number__c)</formula>
        <label>View in SNOW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Error_Response__c</fullName>
        <label>Error Response</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - High</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - Medium</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Low</label>
                </value>
                <value>
                    <fullName>Localized</fullName>
                    <default>true</default>
                    <label>Localized</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Implementation_Plan__c</fullName>
        <defaultValue>&quot;Deployment using Copado during off business hours&quot;</defaultValue>
        <label>Implementation Plan</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>1 - Critical</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>2 - High</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>3 - Moderate</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <default>true</default>
                    <label>4 - Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_LookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release LookUp</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>Change Requests</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Risk_Impact_Analysis__c</fullName>
        <defaultValue>&quot;No risk associated&quot;</defaultValue>
        <label>Risk Impact Analysis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>High</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Moderate</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <default>true</default>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Offering__c</fullName>
        <label>Service Offering</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce FSC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <defaultValue>&quot;Salesforce production deployment&quot;</defaultValue>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-5.0</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>-4.0</fullName>
                    <label>Assess</label>
                </value>
                <value>
                    <fullName>-3.0</fullName>
                    <label>Authorize</label>
                </value>
                <value>
                    <fullName>-2.0</fullName>
                    <label>Scheduled</label>
                </value>
                <value>
                    <fullName>-1.0</fullName>
                    <label>Implement</label>
                </value>
                <value>
                    <fullName>0.0</fullName>
                    <label>Review</label>
                </value>
                <value>
                    <fullName>3.0</fullName>
                    <label>Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <externalId>true</externalId>
        <label>System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Test_Plan__c</fullName>
        <defaultValue>&quot;PO/BA Validate post deployment&quot;</defaultValue>
        <label>Test Plan</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>emergency</fullName>
                    <label>Emergency</label>
                </value>
                <value>
                    <fullName>standard</fullName>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>justification__c</fullName>
        <defaultValue>&quot;Sev1 prod defects deployment&quot;</defaultValue>
        <label>Justification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CR_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>System_ID_Update_Prevention</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(System_ID__c) &amp;&amp; NOT(ISBLANK(PRIORVALUE(System_ID__c)))</errorConditionFormula>
        <errorDisplayField>System_ID__c</errorDisplayField>
        <errorMessage>System ID shouldn&apos;t be updated.</errorMessage>
    </validationRules>
</CustomObject>